--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+*.project
+*.class
+*.classpath
+.metadata
+.settings/
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -26,3 +31,4 @@ buildNumber.properties
 # Maven
 log/
 target/
+
